--- a/Code/config/config.json
+++ b/Code/config/config.json
@@ -5,7 +5,7 @@
 "HDFS_URL" : "192.168.0.115",
 "HDFS_PORT" : "9870",
 "HDFS_USER" : "hadoop",
-"RECENT_ARTICLE_COUNT" : "100", 
+"RECENT_MANUAL_COUNT" : "100",
 "MAX_TRY" : "3",
 "STANDARD_DATETIME_FORMAT" : "%Y-%m-%dT%H:%M:%S.%fZ",
 "STANDARD_DATE_FORMAT" :"%Y-%m-%d",
@@ -16,7 +16,7 @@
 "WEBDRIVER_FILE" : "chromedriver.exe",
 "CLIENTS" : {   
     "META_CLIENT" : "elastic",
-    "ARTICLE_CLIENT" : "elastic",
+    "MANUAL_CLIENT" : "elastic",
     "FILE_CLIENT" : "hdfs"
 }
 } 
