--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
+
+
+
+Code/**/*.pdf
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
