--- a/Code/CoffeeappFrontend/angular.json
+++ b/Code/CoffeeappFrontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Coffeeapp_v2": {
+    "CoffeeappFrontend": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -65,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Coffeeapp_v2:build:production"
+              "browserTarget": "CoffeeappFrontend:build:production"
             },
             "development": {
-              "browserTarget": "Coffeeapp_v2:build:development"
+              "browserTarget": "CoffeeappFrontend:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -76,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Coffeeapp_v2:build"
+            "browserTarget": "CoffeeappFrontend:build"
           }
         },
         "test": {
